# OpenTransformer

./: .gitignore  .pre-commit-config.yaml  README.md  cleanup.py  download_checkpoints.sh  main.py  pyproject.toml
gpt2_log/: events.out.tfevents.1711800117.pranav-pc-Legion-T5-26IRB8.60591.0
huggingface-nlp/: 01.course.ipynb
multiformer/: .gitignore  Makefile  README.md  requirements.txt  setup.py
multiformer/docs/: Makefile  conf.py  index.rst  make.bat
multiformer/gpt2_log/: events.out.tfevents.1711800624.pranav-pc-Legion-T5-26IRB8.71007.0  events.out.tfevents.1711801400.pranav-pc-Legion-T5-26IRB8.77319.0  events.out.tfevents.1711806629.pranav-pc-Legion-T5-26IRB8.104837.0  events.out.tfevents.1711807245.pranav-pc-Legion-T5-26IRB8.111938.0  events.out.tfevents.1711812203.pranav-pc-Legion-T5-26IRB8.3179.0  events.out.tfevents.1711813381.pranav-pc-Legion-T5-26IRB8.10438.0  events.out.tfevents.1711814459.pranav-pc-Legion-T5-26IRB8.23988.0  events.out.tfevents.1711815032.pranav-pc-Legion-T5-26IRB8.30892.0  events.out.tfevents.1711828528.pranav-pc-Legion-T5-26IRB8.5916.0
multiformer/notebooks/: 0.3 transformer_anatomy.ipynb  01. learning-text-classification.ipynb  datasets.ipynb  vanilla_transformer.ipynb
playground/: tool-calling.ipynb
playground/games/: GradioUI.ipynb  OpenChat.md  README.md  adversarial games.ipynb  adversarial_games.py  conversation-sample1.txt  conversation-sample2.txt  conversation-sample3.txt  (+1 more)
productivity-tools/: JupyterAssistant.md  OpenChat.md  README.md  TerminalDebuggingAssistant.md
reflection-journals/: Readme.md  TODO.md
(+161 files in other folders)
